# sw_task

./: .env  .gitignore  .justfile  AWS.yaml  CONTRIBUTORS.txt  Categories.postman_collection.json  Dockerfile  LICENSE  Makefile  README.md  README.txt  cloudformation-template.yml  cloudformation.yaml  cloudformation_template.yaml  db.json  db.sqlite3  deployment.yml  django-docker-ec2-cloudformation.yaml  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.gunicorn.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.uwsgi.yml  docker-compose.yaml  docker-compose.yml  dockerfile  entrypoint.sh  index.html  localhost.postman_environment.json  manage.py  mykey.pem  mykey.ppk  nginx.conf  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.envs/: .env.template
categories_project/: .env  Dockerfile  cloudformation-template.yaml  config.py  docker-compose.yml  manage.py  pyproject.toml
categories_project/categories/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
categories_project/categories/migrations/: 0001_initial.py
categories_project/categories/templates/categories/: category_page.html
categories_project/categories_app/: admin.py  models.py  urls.py  views.py
categories_project/categories_app/management/commands/: init_categories.py
categories_project/categories_app/migrations/: 0001_initial.py
categories_project/categories_app/static/js/: categories.js
categories_project/categories_app/templates/: index.html
categories_project/categories_project/: asgi.py  settings.py  urls.py  wsgi.py
(+246 files in other folders)
