[tool.poetry]
name = "sw-task"
version = "0.1.0"
description = ""
authors = ["ahmedelgamal0 <a.elgamal98@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-debug-toolbar = "^4.4.6"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
