[tool.poetry]
name = "categories-project"
version = "0"
description = "a task"
authors = ["MohanadGad38 <90938419+MohanadGad38@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"    # for postgres db connection - needed to avoid building wheels for psycopg2 from source


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
